[gd_scene load_steps=6 format=3 uid="uid://hpktclvvq00u"]

[ext_resource type="Script" uid="uid://dipeksogynn0r" path="res://Scripts/Hud.gd" id="1_sd512"]
[ext_resource type="FontFile" uid="uid://b563rqedfhe7w" path="res://Textures/Fonts/HelpMe.ttf" id="2_jo1ms"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sd512"]
bg_color = Color(0.4090936, 0.40909368, 0.40909347, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jo1ms"]
bg_color = Color(0.6830772, 0.6830774, 0.6830771, 1)

[sub_resource type="LabelSettings" id="LabelSettings_psnte"]
font = ExtResource("2_jo1ms")

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_sd512")

[node name="LeftContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.96300006
anchor_right = 0.208
anchor_bottom = 0.9710001
offset_left = -0.12800026
offset_top = -0.024047852
offset_right = 0.3840027
offset_bottom = -0.20806885
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="LeftContainer"]
layout_mode = 2
alignment = 1

[node name="HealthBar" type="ProgressBar" parent="LeftContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 5)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_sd512")
theme_override_styles/fill = SubResource("StyleBoxFlat_jo1ms")
show_percentage = false

[node name="RightContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.97200006
anchor_top = 0.95100003
anchor_right = 0.98200005
anchor_bottom = 0.98600006
offset_left = 0.25598145
offset_top = -0.24804688
offset_right = -0.2640381
offset_bottom = 0.07196045
grow_horizontal = 0
grow_vertical = 0

[node name="AmmoRow" type="HBoxContainer" parent="RightContainer"]
layout_mode = 2

[node name="AmmoValue" type="Label" parent="RightContainer/AmmoRow"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "--"
label_settings = SubResource("LabelSettings_psnte")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshead" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
grow_horizontal = 2
grow_vertical = 2
